--- a/pg_tde/tde/tasks/redhat_tasks.yml
+++ b/pg_tde/tde/tasks/redhat_tasks.yml
@@ -464,7 +464,7 @@
       psql -c "CREATE SCHEMA tde;"
       psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde SCHEMA tde;"
       psql -c "SELECT tde.pg_tde_add_global_key_provider_file('reg_file-global', '/tmp/pg_tde_test_keyring.per');"
-      psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-principal-key', 'reg_file-global');"
+      psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-key', 'reg_file-global');"
       psql -c "ALTER SYSTEM SET pg_tde.wal_encrypt = on;"
       psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde;"
       psql -c "ALTER SYSTEM SET search_path = postgres,public,tde;"
