--- a/tasks/install_ppg17.yml
+++ b/tasks/install_ppg17.yml
@@ -25,7 +25,7 @@
     command: dnf config-manager --set-enabled powertools
     when: ansible_os_family == "RedHat" and ansible_distribution == "Rocky" and ansible_distribution_major_version == "8"
   
-  - name: Enable powertools on Oracle linux 8
+  - name: Enable ol8_codeready_builder on Oracle linux 8
     become: true
     command: dnf config-manager --set-enabled ol8_codeready_builder
     when: ansible_os_family == "RedHat" and ansible_distribution == "OracleLinux" and ansible_distribution_major_version == "8"
@@ -35,7 +35,7 @@
     command: dnf config-manager --set-enabled crb
     when: ansible_os_family == "RedHat" and ansible_distribution == "Rocky" and ansible_distribution_major_version == "9"
   
-  - name: Enable powertools on Oracle linux 9
+  - name: Enable ol9_codeready_builder on Oracle linux 9
     become: true
     command: dnf config-manager --set-enabled ol9_codeready_builder
     when: ansible_os_family == "RedHat" and ansible_distribution == "OracleLinux" and ansible_distribution_major_version == "9"
