--- a/pg_stat_monitor/pgsm/tasks/main.yml
+++ b/pg_stat_monitor/pgsm/tasks/main.yml
@@ -3,8 +3,8 @@
     set_fact:
       use_package_install: "{{ lookup('env', 'PGSM_PACKAGE_INSTALL') }}"
       major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
+      pg_version_to_install: "{{ lookup('env', 'VERSION') | replace('ppg-','') }}"
       cacheable: true
-
   - name: Configure repository
     include_tasks: ../../../../tasks/enable_repo.yml
 
