--- a/pg_tde/tde/tasks/debian_tasks.yml
+++ b/pg_tde/tde/tasks/debian_tasks.yml
@@ -273,18 +273,6 @@
   # installcheck-world Server testsuite
   - name: Start pg_tde tests only - installcheck
     shell: | 
-      psql -c "CREATE SCHEMA tde;"
-      psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde SCHEMA tde;"
-      psql -c "SELECT tde.pg_tde_add_global_key_provider_file('reg_file-global', '/tmp/pg_tde_test_keyring.per');"
-      psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-key', 'reg_file-global');"
-      psql -c "ALTER SYSTEM SET pg_tde.wal_encrypt = on;"
-      psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde;"
-      psql -c "ALTER SYSTEM SET search_path = postgres,public,tde;"
-      psql -c "SELECT pg_reload_conf();"
-      echo "default_table_access_method = 'tde_heap'" >> /etc/postgresql/17/main/postgresql.conf
-      sudo systemctl stop postgresql
-      sleep 5
-      sudo systemctl start postgresql
       cd /tmp
       python3 -m venv validation
       source validation/bin/activate
@@ -303,20 +291,32 @@
       { exec >$TV; vault server -dev; } &
       sleep 10
       export ROOT_TOKEN=$(cat $TV | grep "Root Token" | cut -d ":" -f 2 | xargs echo -n)
-      echo "Root token: $ROOT_TOKEN"
-      export ROOT_TOKEN=$ROOT_TOKEN && cd /tmp/postgres/contrib/pg_tde && EXTRA_REGRESS_OPTS="--extra-setup=/tmp/postgres/ci_scripts/tde_setup.sql" make -s installcheck USE_PGXS=1 -k
+      echo "Root token: $ROOT_TOKEN" && export ROOT_TOKEN=$ROOT_TOKEN && cd /tmp/postgres/contrib/pg_tde && EXTRA_REGRESS_OPTS="--extra-setup=/tmp/postgres/ci_scripts/tde_setup.sql" make -s installcheck USE_PGXS=1 -k
     become_user: postgres
     args:
       executable: /bin/bash
       chdir: "/tmp/postgres/contrib/pg_tde"
     environment:
-      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
-      LD_LIBRARY_PATH: "/opt/pgsql/lib"
       PG_TEST_PORT_DIR: "/tmp/pg_tde"
       TDE_MODE: 1
     register: regression
 
   - debug: var=regression.stdout_lines
+  - debug: var=regression.stderr_lines
+
+  - stat:
+      path: /tmp/postgres/contrib/pg_tde/regression.out
+    register: tde_diff
+
+  - name: Get pg_tde - regression.out contents
+    command: cat /tmp/postgres/contrib/pg_tde/regression.out
+    register: command_output
+    when: tde_diff.stat.isreg is defined and tde_diff.stat.isreg == True
+
+  - name: Print to console pg_tde - regression.out contents
+    debug:
+      msg: "{{command_output.stdout_lines}}"
+    when: tde_diff.stat.isreg is defined and tde_diff.stat.isreg == True
 
   - stat:
       path: /tmp/postgres/contrib/pg_tde/regression.diffs
