--- a/ppg/pg-16-major-upgrade/tasks/main.yml
+++ b/ppg/pg-16-major-upgrade/tasks/main.yml
@@ -97,7 +97,7 @@
       - percona-postgresql-plpython3-16
       - percona-postgresql-pltcl-16
       - percona-postgresql-server-dev-16
-      - percona-postgresql-server-dev-all
+      - percona-postgresql-common-dev
       - percona-postgresql-16-dbgsym
       - percona-postgresql-client-16-dbgsym
       - percona-postgresql-plperl-16-dbgsym
@@ -162,7 +162,7 @@
     packages:
         - percona-postgresql-client-common
         - percona-postgresql-common
-        - percona-postgresql-server-dev-all
+        - percona-postgresql-common-dev
         - percona-postgresql16
         - percona-postgresql16-contrib
         - percona-postgresql16-debuginfo
@@ -225,6 +225,13 @@
   service:
     name: postgresql
     state: stopped
+  when: ansible_os_family == "Debian"
+
+- name: Execute pg_createcluster for version 16
+  command: /usr/bin/pg_createcluster 16 main --port=5433
+  become: true
+  become_method: sudo
+  become_user: postgres
   when: ansible_os_family == "Debian"
 
 - pause:
@@ -294,17 +301,159 @@
     enabled: true
   when: ansible_os_family == "RedHat"
 
-- name: Restart postgresql service for Debian based
-  service:
-    name: postgresql
-    state: restarted
-    enabled: true
+- name: list /var/run/postgresql
+  command: ls -la /var/run/postgresql
+  become: true
   when: ansible_os_family == "Debian"
-
-- name: Display ppg version
-  become_user: postgres
-  shell: psql -c "select version()"
   register: results
 
 - debug:
-      var: results.stdout
+    var: results.stdout_lines
+
+- name: list pg_lsclsuters
+  command: pg_lsclusters
+  become: true
+  become_method: sudo
+  become_user: postgres
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: Drop pg_dropcluster for version 15
+  command: /usr/bin/pg_dropcluster 15 main
+  become: true
+  become_method: sudo
+  become_user: postgres
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: list pg_lsclsuters
+  command: pg_lsclusters
+  become: true
+  become_method: sudo
+  become_user: postgres
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: Delete /var/run/postgresql lock and pid file
+  command: rm -fr /var/run/postgresql/*
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: list /var/run/postgresql
+  command: ls -la /var/run/postgresql/
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: Restart postgresql service for Debian based
+  service:
+    name: postgresql@16-main.service
+    state: started
+    enabled: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: list pg_lsclsuters
+  command: pg_lsclusters
+  become: true
+  become_method: sudo
+  become_user: postgres
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: Get Service Status
+  ansible.builtin.systemd:
+    name: "postgresql"
+  register: pg_service_status
+
+- debug:
+    var: pg_service_status.status.ActiveState
+
+- name: Get Service Status
+  ansible.builtin.systemd:
+    name: "postgresql@16-main.service"
+  register: pg_service_status
+
+- debug:
+    var: pg_service_status.status.ActiveState
+
+- name: list /var/run/postgresql
+  command: ls -la /var/run/postgresql/
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+# - name: show running process for postgres
+#   command: ps -ef | grep -i postgres
+#   become: true
+#   when: ansible_os_family == "Debian"
+#   register: results
+
+# - debug:
+#     var: results.stdout_lines
+
+- name: show port for postgres
+  command: grep -i port /etc/postgresql/16/main/postgresql.conf
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: show pg log 15 for postgres
+  ignore_errors: true
+  command: cat /var/log/postgresql/postgresql-15-main.log
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- name: show pg log 16 for postgres
+  ignore_errors: true
+  command: cat /var/log/postgresql/postgresql-16-main.log
+  become: true
+  when: ansible_os_family == "Debian"
+  register: results
+
+- debug:
+    var: results.stdout_lines
+
+- pause:
+    minutes: 1
+
+- name: Display ppg version
+  ignore_errors: true
+  become_user: postgres
+  shell: psql -c "select version();"
+  register: results
+
+- debug:
+    var: results.stdout_lines
