--- a/ppg/pg-tarballs/tasks/main.yml
+++ b/ppg/pg-tarballs/tasks/main.yml
@@ -9,7 +9,7 @@
     major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
     tarball_url:  "{{ lookup('env', 'TARBALL_URL') }}"
     dest_dir: "/opt/pgdistro"
-    data_dir_path: "/usr/local/pgsql"
+    data_dir_path: "/opt/pgdistro/data"
     user_name: 'postgres'
     database_name: 'postgres'
     server_port: 5432
@@ -27,7 +27,7 @@
 
 - name: Set Data directory
   ansible.builtin.set_fact:
-    data_dir: "{{data_dir_path}}/data{{major_version}}"
+    data_dir: "{{ data_dir_path }}"
 
 - name: Tarball's SSL version
   debug:
@@ -101,6 +101,68 @@
   command: "pg_ctl -D {{data_dir}} -l /tmp/data{{major_version}}.log start -o '-p {{server_port}}'"
   environment:
     PATH: "/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:{{dest_dir}}/percona-postgresql{{major_version}}/bin"
+
+- name: Display ppg version
+  become: true
+  ansible.builtin.command:
+    cmd: ./psql -c "select version()"
+  become_user: postgres
+  args:
+    chdir: "{{dest_dir}}/percona-postgresql{{major_version}}/bin"
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: Display ppg version
+  shell: ./psql -c "select version();"
+  become_user: postgres
+  args:
+    chdir: "{{dest_dir}}/percona-postgresql{{major_version}}/bin"
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: Create extension
+  shell: ./psql -c "create extension xml2;"
+  become_user: postgres
+  args:
+    chdir: "{{dest_dir}}/percona-postgresql{{major_version}}/bin"
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: Create extension
+  shell: ./psql -c "create extension plperl;"
+  become_user: postgres
+  args:
+    chdir: "{{dest_dir}}/percona-postgresql{{major_version}}/bin"
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: list /home/postgres
+  ignore_errors: yes
+  become: true
+  shell: ls -ltra /home/postgres
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: list /opt/pgdistro
+  ignore_errors: yes
+  become: true
+  shell: ls -l /opt/pgdistro
+  register: results
+
+- debug: var=results.stdout_lines
+
+- name: list /opt/pgdistro server bin dir
+  ignore_errors: yes
+  become: true
+  shell: ls -l /opt/pgdistro/percona-postgresql17/bin
+  register: results
+
+- debug: var=results.stdout_lines
 
 - name: Install PPG tools
   include_tasks: ../../../../tasks/install_ppg_tools_tarballs.yml
