--- a/tasks/install_ppg_tarballs.yml
+++ b/tasks/install_ppg_tarballs.yml
@@ -17,7 +17,6 @@
     command: dnf module disable postgresql -y
     when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "8"
 
-
   - name: Remove the tarball destination directory if it exists
     become: true
     ansible.builtin.command:
@@ -36,6 +35,8 @@
       owner: postgres
       group: postgres
       mode: '0755'
+      recurse: yes
+      state: directory
 
   - name: Install Percona PG tarballs
     unarchive:
@@ -54,6 +55,88 @@
       - percona-python3
       - percona-perl
       - percona-tcl
+
+  # - name: Create a symbolic link Rhel 9
+  #   become: true
+  #   ansible.builtin.file:
+  #     src: /lib64/libreadline.so.8
+  #     dest: "{{dest_dir}}/percona-postgresql{{major_version}}/bin/libreadline.so.7"
+  #     owner: postgres
+  #     group: postgres
+  #     state: link
+  #   when: ansible_os_family == "RedHat" and ansible_distribution_major_version == "9"
+
+  # - name: Create a symbolic link Ubuntu 22 & 24 AMD
+  #   become: true
+  #   ansible.builtin.file:
+  #     src: /usr/lib/x86_64-linux-gnu/libreadline.so.8
+  #     dest: "{{dest_dir}}/percona-postgresql{{major_version}}/bin/libreadline.so.7"
+  #     owner: postgres
+  #     group: postgres
+  #     state: link
+  #   when: ansible_os_family == "Debian" and ansible_architecture == "x86_64" and 
+  #     (ansible_distribution_major_version == "22" or ansible_distribution_major_version == "24")
+
+  # - name: Create a symbolic link Ubuntu 22 & 24 ARM
+  #   become: true
+  #   ansible.builtin.file:
+  #     src: /usr/lib/aarch64-linux-gnu/libreadline.so.8
+  #     dest: "{{dest_dir}}/percona-postgresql{{major_version}}/bin/libreadline.so.7"
+  #     owner: postgres
+  #     group: postgres
+  #     state: link
+  #   when: ansible_os_family == "Debian" and ansible_architecture == "aarch64" and 
+  #     (ansible_distribution_major_version == "22" or ansible_distribution_major_version == "24")
+
+  # - name: Remove existing psql script file
+  #   ansible.builtin.file:
+  #     state: absent
+  #     path: "{{dest_dir}}/percona-postgresql{{major_version}}/bin/psql"
+
+  # - name: Add psql file
+  #   copy:
+  #     src: psql
+  #     dest: "{{dest_dir}}/percona-postgresql{{major_version}}/bin/psql"
+  #     owner: postgres
+  #     group: postgres
+  #     mode: 0755
+
+  - name: Change ownership of /opt/pgdistro/ to postgres
+    become: true
+    ansible.builtin.command:
+      cmd: chown -R  postgres:postgres /opt/pgdistro/
+
+  - name: list /home/postgres
+    ignore_errors: yes
+    become: true
+    shell: ls -ltra /home/postgres
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: list /opt/pgdistro
+    ignore_errors: yes
+    become: true
+    shell: ls -l /opt/pgdistro
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: list /opt/pgdistro server bin dir
+    ignore_errors: yes
+    become: true
+    shell: ls -l /opt/pgdistro/percona-postgresql17/bin
+    register: results
+
+  - debug: var=results.stdout_lines
+
+  - name: list /opt/pgdistro percona-pgbackrest bin dir
+    ignore_errors: yes
+    become: true
+    shell: ls -l /opt/pgdistro/percona-pgbackrest/bin
+    register: results
+
+  - debug: var=results.stdout_lines
 
   - name: Remove existing abc.list.type file if it exists
     file:
