--- a/tasks/install_ppg_tools_tarballs.yml
+++ b/tasks/install_ppg_tools_tarballs.yml
@@ -29,6 +29,24 @@
         - libtext-csv-xs-perl
     when: ansible_os_family == "Debian"
 
+  - name: Install libreadline for Debian and Ubuntu
+    apt:
+      name: "{{ packages }}"
+      state: latest
+    vars:
+      packages:
+        - libreadline-dev
+    when: ansible_os_family == "Debian"
+
+  - name: Install libreadline for RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+    vars:
+      packages:
+        - readline-devel
+    when: ansible_os_family == "RedHat"
+
   - name: Create pgbackrest directory
     file:
       path: /etc/pgbackrest/
