--- a/pg_tde/tde/tasks/redhat_tasks.yml
+++ b/pg_tde/tde/tasks/redhat_tasks.yml
@@ -225,7 +225,6 @@
       packages:
       - percona-postgresql-client-common
       - percona-postgresql-common
-      - percona-postgresql-server-dev-all
       - percona-postgresql{{ postgres_version }}
       - percona-postgresql{{ postgres_version }}-contrib
       - percona-postgresql{{ postgres_version }}-devel
@@ -250,7 +249,6 @@
       packages:
       - percona-postgresql-client-common
       - percona-postgresql-common
-      - percona-postgresql-server-dev-all
       - percona-postgresql{{ postgres_version }}
       - percona-postgresql{{ postgres_version }}-contrib
       - percona-postgresql{{ postgres_version }}-devel
@@ -263,6 +261,26 @@
     environment:
       PERCONA_TELEMETRY_URL: "https://check-dev.percona.com/v1/telemetry/GenericReport"
     when: ansible_distribution_major_version == "9"
+
+  - name: Install postgresql-server-dev-all RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - percona-postgresql-server-dev-all
+    when: (ansible_os_family == "RedHat" and pg_version_to_install | string is version('17.4', '<=', strict=True))
+
+  - name: Install postgresql-common-dev RHEL
+    yum:
+      name: "{{ packages }}"
+      state: latest
+      update_cache: yes
+    vars:
+      packages:
+      - percona-postgresql-common-dev
+    when: (ansible_os_family == "RedHat" and pg_version_to_install | string is version('17.5', '>=', strict=True))
 
   - name: Initialize Postgres RHEL
     become: true
@@ -457,22 +475,23 @@
     when: ansible_distribution_major_version == "8" and ansible_architecture == 'aarch64'
 
   - debug: var=results.stdout_lines
-  
+
+      # psql -c "CREATE SCHEMA tde;"
+      # psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde SCHEMA tde;"
+      # psql -c "SELECT tde.pg_tde_add_global_key_provider_file('reg_file-global', '/tmp/pg_tde_test_keyring.per');"
+      # psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-key', 'reg_file-global');"
+      # psql -c "ALTER SYSTEM SET pg_tde.wal_encrypt = on;"
+      # psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde;"
+      # psql -c "ALTER SYSTEM SET search_path = postgres,public,tde;"
+      # psql -c "SELECT pg_reload_conf();"
+      # echo "default_table_access_method = 'tde_heap'" >> /var/lib/pgsql/17/data/postgresql.conf
+      # sudo systemctl stop postgresql-17
+      # sleep 5
+      # sudo systemctl start postgresql-17
+
   # installcheck-world Server testsuite
   - name: Start pg_tde tests only - installcheck
     shell: | 
-      psql -c "CREATE SCHEMA tde;"
-      psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde SCHEMA tde;"
-      psql -c "SELECT tde.pg_tde_add_global_key_provider_file('reg_file-global', '/tmp/pg_tde_test_keyring.per');"
-      psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-key', 'reg_file-global');"
-      psql -c "ALTER SYSTEM SET pg_tde.wal_encrypt = on;"
-      psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde;"
-      psql -c "ALTER SYSTEM SET search_path = postgres,public,tde;"
-      psql -c "SELECT pg_reload_conf();"
-      echo "default_table_access_method = 'tde_heap'" >> /var/lib/pgsql/17/data/postgresql.conf
-      sudo systemctl stop postgresql-17
-      sleep 5
-      sudo systemctl start postgresql-17
       cd /tmp
       python3 -m venv validation
       source validation/bin/activate
@@ -491,20 +510,32 @@
       { exec >$TV; vault server -dev; } &
       sleep 10
       export ROOT_TOKEN=$(cat $TV | grep "Root Token" | cut -d ":" -f 2 | xargs echo -n)
-      echo "Root token: $ROOT_TOKEN"
-      export ROOT_TOKEN=$ROOT_TOKEN && cd /tmp/postgres/contrib/pg_tde && EXTRA_REGRESS_OPTS="--extra-setup=/tmp/postgres/ci_scripts/tde_setup.sql" make -s installcheck USE_PGXS=1 -k
+      echo "Root token: $ROOT_TOKEN" && export ROOT_TOKEN=$ROOT_TOKEN && cd /tmp/postgres/contrib/pg_tde && EXTRA_REGRESS_OPTS="--extra-setup=/tmp/postgres/ci_scripts/tde_setup.sql" make -s installcheck USE_PGXS=1 -k
     become_user: postgres
     args:
       executable: /bin/bash
       chdir: "/tmp/postgres/contrib/pg_tde"
     environment:
-      PATH: "/opt/pgsql/bin:/opt/pgsql/lib:{{ ansible_env.PATH }}"
-      LD_LIBRARY_PATH: "/opt/pgsql/lib"
       PG_TEST_PORT_DIR: "/tmp/pg_tde"
       TDE_MODE: 1
     register: regression
 
   - debug: var=regression.stdout_lines
+  - debug: var=regression.stderr_lines
+
+  - stat:
+      path: /tmp/postgres/contrib/pg_tde/regression.out
+    register: tde_diff
+
+  - name: Get pg_tde - regression.out contents
+    command: cat /tmp/postgres/contrib/pg_tde/regression.out
+    register: command_output
+    when: tde_diff.stat.isreg is defined and tde_diff.stat.isreg == True
+
+  - name: Print to console pg_tde - regression.out contents
+    debug:
+      msg: "{{command_output.stdout_lines}}"
+    when: tde_diff.stat.isreg is defined and tde_diff.stat.isreg == True
 
   - stat:
       path: /tmp/postgres/contrib/pg_tde/regression.diffs
