--- a/pgaudit13_set_user/setup/tasks/main.yml
+++ b/pgaudit13_set_user/setup/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Set Facts - Major version
   set_fact:
     major_version: "{{ lookup('env', 'VERSION').split('.')[0].split('-')[1] }}"
+    pg_version_to_install: "{{ lookup('env', 'VERSION') | replace('ppg-','') }}"
     cacheable: true
 
 - name: Configure repository
@@ -30,7 +31,7 @@
     packages:
     - percona-postgresql-client-common
     - percona-postgresql-common
-    - percona-postgresql-server-dev-all
+    - percona-postgresql-common-dev
     - percona-postgresql{{ major_version }}
     - percona-postgresql{{ major_version }}-contrib
     - percona-postgresql{{ major_version }}-devel
