--- a/ppg/pg-16-meta-ha/molecule/ol-9-arm/molecule.yml
+++ b/ppg/pg-16-meta-ha/molecule/ol-9-arm/molecule.yml
@@ -4,12 +4,12 @@ dependency:
 driver:
   name: ec2
 platforms:
-  - name: rocky9-${BUILD_NUMBER}-${JOB_NAME}
+  - name: ol9-${BUILD_NUMBER}-${JOB_NAME}
     region: eu-central-1
-    image: ami-0899e48d70f37fb63
+    image: ami-098a7d45c0983caea
     vpc_subnet_id: subnet-085deaca8c1c59a4f
     instance_type: t4g.large
-    ssh_user: rocky
+    ssh_user: ec2-user
     root_device_name: /dev/sda1
     instance_tags:
       iit-billing-tag: jenkins-pg-worker
