--- a/psp/server_tests/tasks/debian_tasks.yml
+++ b/psp/server_tests/tasks/debian_tasks.yml
@@ -303,9 +303,11 @@
   - name: Run installcheck-world with tde
     ignore_errors: yes
     shell: | 
+      rm -f /tmp/pg_tde_test_keyring.per
       psql -c "CREATE SCHEMA tde;"
       psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde SCHEMA tde;"
       psql -c "SELECT tde.pg_tde_add_global_key_provider_file('reg_file-global', '/tmp/pg_tde_test_keyring.per');"
+      psql -c "SELECT tde.pg_tde_create_key_using_global_key_provider('server-key', 'reg_file-global');"
       psql -c "SELECT tde.pg_tde_set_server_key_using_global_key_provider('server-key', 'reg_file-global');"
       psql -c "ALTER SYSTEM SET pg_tde.wal_encrypt = on;"
       psql -c "CREATE EXTENSION IF NOT EXISTS pg_tde;"
